--- a/app/components/Divider.module.css
+++ b/app/components/Divider.module.css
@@ -2,7 +2,7 @@
   height: 1px;
   background-color: rgba(0, 0, 0, 0.1);
   width: 100%;
-  margin: 0.5rem 0;
+  margin: 0 0;
 }
 
 .mobileOnly {
