--- a/app/page.module.css
+++ b/app/page.module.css
@@ -60,7 +60,7 @@
   grid-row: 2;
   display: flex;
   flex-direction: column;
-  gap: 0.5rem;
+  gap: 1rem;
   align-self: flex-end;
 }
 
@@ -122,7 +122,7 @@
   }
 
   .heroActions {
-    gap: 0.5rem;
+    gap: 2rem;
     order: 3;
     width: 100%;
     padding: 0 1rem 0 1rem;
